# vector-extra

./: .gitignore  .travis.yml  LICENSE  TODO  vector-extra.cabal
src/Data/Vector/Fusion/Stream/Monadic/: Extra.hs
src/Data/Vector/Generic/: Extra.hs
test/: ListAnalogies.hs  Spec.hs
