name:                vector-extra
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/sjakobi/vector-extra#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Jakobi
maintainer:          simon.jakobi@gmail.com
copyright:           2015 Simon Jakobi
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Vector.Fusion.Stream.Monadic.Extra
                       Data.Vector.Generic.Extra
  build-depends:       base >= 4.7 && < 5
                     , vector
  ghc-options:         -Wall -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite vector-extra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , vector
                     , vector-extra
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sjakobi/vector-extra
